--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install -r doc/lib.txt
+  - pip install -r lib.txt
 # 限制项目分支
 branches:
   only:
